--- a/style.css
+++ b/style.css
@@ -45,12 +45,29 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     position: relative;
 }
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.escape{
+    position: absolute;
+    bottom: var(--padlarge);
+    right: var(--padlarge);
+    font-size: var(--fontsmall);
+}
+.escape button{
+    padding: calc( var(--padlittle));
+    color: black;
+    font-weight: 600;
+    margin-right: var(--gap);
+    font-size: var(--fontsmall);
+    border-radius: var(--radius);
+    border: 0;
 }
 /* REPEATED STYLES */
 .mediumbold{
@@ -82,6 +99,26 @@ header{
     gap: var(--gap);
     align-items: center;
 }
+.padleft{
+    padding-left: var(--padlittle);
+}
+.red{
+    color: rgba(255, 40, 40, 0.6);
+}
+.green{
+    color: #00D9B2;
+}
+.mb{
+    margin-bottom: calc(0.5 * var(--padlittle));
+}
+.hidden{
+    opacity: 0;
+    position: absolute;
+    z-index: -100;
+    pointer-events: none;
+    transform: translateX(10vw);
+    height: 0;
+}
 /* CONTAINER STYLES */
 .linecontainer{
     background: linear-gradient(205.36deg, rgba(0, 71, 255, 0.2) 1.96%, rgba(0, 81, 255, 0) 52.69%), linear-gradient(196.77deg, rgba(0, 71, 255, 0) 71.08%, rgba(0, 71, 255, 0.2) 98.43%), rgba(88, 88, 88, 0.4);
@@ -109,15 +146,25 @@ aside{
     flex-direction: column;
     justify-content: space-between;
 }
+.logoutdiv{
+    background: rgba(255, 40, 40, 0.15);
+    border-radius: var(--radius);
+    padding: var(--padlittle);
+}
+.tabactive{
+    background: rgba(166, 201, 255, 0.15) !important;
+}
 .sections, .actions{
     margin-top: var(--gaplarge);
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
 }
 .sections div, .actions div{
     border-radius: calc(0.5 * var(--radius));
     font-size: var(--fontmedium);
     text-transform: capitalize;
     padding: var(--padmedium);
-    margin: var(--gap) 0;
 }
 .sections div{
     background: rgba(166, 201, 255, 0.04);
@@ -129,12 +176,13 @@ aside{
     margin-top: calc(1.5 * var(--gaplarge));
     display: flex;
     gap: var(--gaplarge);
+    height: 85%;
+}
+.overviewcontent, .transactioncontent, .settingcontent{
     flex: 1;
 }
 .overviewcontent{
-    flex: 1;
     display: grid;
-    /* flex-direction: column; */
     grid-template-rows: 1fr 1fr;
 }
 .overviewcarddetails{
@@ -168,10 +216,11 @@ aside{
     display: flex;
     flex-direction: column;
     height: 80%;
+    width: 80%;
     justify-content: space-between;
     padding-right: var(--padlarge);
     border-radius: var(--radius);
-    margin-right: var(--gaplarge);
+    /* margin-right: var(--gaplarge); */
 }
 .cardbalance{
     font-size: calc(1.3 * var(--fontlarge));
@@ -182,12 +231,23 @@ aside{
 .card div span{
     color: #A6C9FF;
 }
+.transactions{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    margin-top: var(--gap);
+}
+.transactionsbox{
+    overflow-y: scroll;
+    padding-right: var(--padlittle);
+    margin-top: var(--gap);
+}
 .pasttransactions{
     padding: var(--padlittle) 0;
     display: flex;
     flex-direction: column;
     gap: var(--gap);
-    overflow-y: scroll;
 }
 .pasttransaction{
     display: flex;
@@ -199,9 +259,13 @@ aside{
     border-radius: var(--radius);
     padding-left: var(--padmedium);
 }
+.narration{
+    font-size: var(--fontmedium);
+}
 .narrationname{
     color: #578CFF;
     margin-left: var(--padlittle);
+    font-size: var(--fontmedium);
 }
 
 @media screen and (max-width: 4000px) {
