--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ input[type=number]{
     --deepblue: rgba(166, 201, 255, 0.5);
     --deepred: rgba(255, 40, 40, 0.6);
     --deepgreen: rgba(0, 217, 178, 1);
-    --fontsmall: clamp(16px, 0.8vw, 5rem);
-    --fontmedium: clamp(18px, 1vw, 7rem);
-    --fontlarge: clamp(20px, 1.2vw, 9rem);
+    --fontsmall: 16px;
+    --fontmedium: 18px
+    --fontlarge: 20px;
     --padlittle: clamp(0.5rem, 0.3vw, 35px);
     --padmedium: clamp(1rem, 0.5vw, 50px);
     --padlarge: clamp(2rem, 1vw, 100px);
@@ -392,7 +392,7 @@ aside{
     /* margin-right: var(--gaplarge); */
 }
 .cardbalance{
-    font-size: calc(1.3 * var(--fontlarge));
+    font-size: 24px;
 }
 .card div p, .card div h3{
     margin-top: var(--padlittle);
